Responsive table to fix overflow bug on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -253,6 +253,23 @@
   }
 }
 
+.post-content table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.post-content table th,
+.post-content table td {
+  padding: 0.5em;
+  border: 1px solid #ddd;
+}
+
+.post-content table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
 .post-content {
   margin-bottom: $spacing-unit;
 
